--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -12,7 +12,7 @@
   <div class="bg-success">
     <div class="container p-5 text-white">
       <h1><%= @company.name %></h1>
-      <h3><%= @company.city %>, <%= @company.state %></h3>
+      <h3><%= @company.address %></h3>
     </div>
   </div>
   <% if @company.description.present? %>
